--- a/locales/de.yml
+++ b/locales/de.yml
@@ -8,3 +8,38 @@ de:
   <p><a href=\"https://bag-coronavirus.ch/\" target=\"_blank\">Weitere Infos zum Coronavirus</a><br>
   Infoline des BAG: +41 58 463 00 00</p>"
   toform: "Zum Formular"
+  sex: "Geschlecht"
+  male: "Männlich"
+  female: "Weiblich"
+  noinformation: "Keine Angabe"
+  age: "Alter"
+  zip: "Postleitzahl"
+  other: "Andere"
+  phoneDigits: "Letzte vier Ziffern Ihrer Telefonnummer"
+  feelsHealthy: "Fühlen Sie sich gesund?"
+  hasBeenTested: "Sind Sie auf Covid-19 getestet worden?"
+  whereTested: "Falls ja, wo wurden Sie getestet?"
+  whenTested: "Falls Ja, wann wurden Sie getestet?"
+  worksInHealth: "Arbeiten Sie im Gesundheitssystem mit PatientInnen?"
+  wasAbroad: "Waren Sie in den letzten 14 Tagen im Ausland?"
+  wasInContactWithCase: "Hatten Sie Kontakt zu einem positiven Fall von Covid-19?"
+  chronicCondition: "Leiden Sie an einer chronischen Erkrankung?"
+  fever: "Fieber über 38 Grad"
+  coughing: "Husten"
+  dyspnea: "Atembeschwerden"
+  tiredness: "Grosse Müdigkeit"
+  throat: "Halsschmerzen"
+  yesAnswer: "Ja"
+  noAnswer: "Nein"
+  hospital: "Spital"
+  privatePractice: ""
+  ems: ""
+  italy: "Italien"
+  spain: "Spanien"
+  germany: "Deutschland"
+  france: "Frankreich"
+  heart: "Herz"
+  lung: "Lunge"
+  diabetes: "Diabetes"
+  followingSymptoms: "Leiden Sie derzeit an folgenden Symptomen:"
+  sendForm: "Formular absenden"
