--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -7,4 +7,39 @@
     <p>Vos données seront collectées de manière anonyme. Vous ne serez pas identifié par votre nom.</p>
     <p><a href=\"https://bag-coronavirus.ch/\" target=\"_blank\">Weitere Infos zum Coronavirus</a><br>
     Infoline des BAG: +41 58 463 00 00</p>"
-    toform: "Zum Formular"
+    toform: "Au formulaire"
+    sex: "Sexe"
+    male: "Mâle"
+    female: "Femme"
+    noinformation: "~ Aucune information"
+    age: "Age"
+    zip: "Code postal"
+    other: "Autres"
+    phoneDigits: "Les quatre derniers chiffres de votre numéro de téléphone"
+    feelsHealthy: "Fühlen Sie sich gesund?"
+    hasBeenTested: "Avez-vous été testé pour le covid-19?"
+    whereTested: "Si oui: où?"
+    whenTested: "Si oui: quand?"
+    worksInHealth: "Travaillez-vous dans le système de santé avec des patients?"
+    wasAbroad: "Avez-vous été à l’étranger durant ces 14 derniers jours?"
+    wasInContactWithCase: "Avez-vous été en contact avec un cas positif pour le covid-19?"
+    chronicCondition: "Souffrez-vous d’une affection chronique?"
+    fever: "Fièvre de plus de 38 degrés"
+    coughing: "Toux"
+    dyspnea: "Difficultés respiratoires"
+    tiredness: "Grande fatigue"
+    throat: "Maux de gorge"
+    yesAnswer: "Oui"
+    noAnswer: "Non"
+    hospital: "Hôpital"
+    privatePractice: "Pratique privée"
+    ems: "EMS"
+    italy: "Italie"
+    spain: "Espagne"
+    germany: "Allemagne"
+    france: "France"
+    heart: "Affection cardiaque"
+    lung: "Pulmonaire"
+    diabetes: "Diabète"
+    followingSymptoms: "Souffrez-vous actuellement des symptômes suivants:"
+    sendForm: "~ Envoyer le formulaire"
