--- a/locales/it.yml
+++ b/locales/it.yml
@@ -7,4 +7,39 @@
     <p>I vostri dati saranno raccolti in forma anonima. Non sarete identificati per nome.</p>
     <p><a href=\"https://bag-coronavirus.ch/\" target=\"_blank\">Weitere Infos zum Coronavirus</a><br>
     Infoline des BAG: +41 58 463 00 00</p>"
-    toform: "Zum Formular"
+    toform: "~ Al modulo"
+    sex: "Sesso"
+    male: "Uomo"
+    female: "Donna"
+    noinformation: "~ Nessuna informazione"
+    age: "Età"
+    zip: "Codice Postale"
+    other: "Altro"
+    phoneDigits: "Le ultime quattro cifre del vostro numero di telefono"
+    feelsHealthy: "~ Ti senti in salute?"
+    hasBeenTested: "Siete stati testati per covid-19?"
+    whereTested: "Se si: dove?"
+    whenTested: "Se si: quando?"
+    worksInHealth: "Lavora nel sistema sanitario con i pazienti?"
+    wasAbroad: "È stato all'estero negli ultimi 14 giorni?"
+    wasInContactWithCase: "Siete stati in contatto con un caso positivo di covide-19?"
+    chronicCondition: "Soffre di una condizione cronica?"
+    fever: "Febbre oltre i 38 gradi"
+    coughing: "Tosse"
+    dyspnea: "Difficoltà di respirazione"
+    tiredness: "Molto stanco"
+    throat: "Mal di gola"
+    yesAnswer: "Si"
+    noAnswer: "No"
+    hospital: "Ospedale"
+    privatePractice: "Ambulatorio privato"
+    ems: "Centro medico-sociale"
+    italy: "Italia"
+    spain: "Spagna"
+    germany: "Germania"
+    france: "Francia"
+    heart: "Cuore"
+    lung: "Pulmoni"
+    diabetes: "Diabete"
+    followingSymptoms: "Attualmente soffre dei seguenti sintomi:"
+    sendForm: "~ invia il modulo"
