Form improvements and translations

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -23,6 +23,7 @@ de:
   worksInHealth: "Arbeiten Sie im Gesundheitssystem mit PatientInnen?"
   wasAbroad: "Waren Sie in den letzten 14 Tagen im Ausland?"
   wasInContactWithCase: "Hatten Sie Kontakt zu einem positiven Fall von Covid-19?"
+  dateContacted: "Falls ja, wann hatten Sie den Kontakt?"
   chronicCondition: "Leiden Sie an einer chronischen Erkrankung?"
   fever: "Fieber über 38 Grad"
   coughing: "Husten"
@@ -31,9 +32,9 @@ de:
   throat: "Halsschmerzen"
   yesAnswer: "Ja"
   noAnswer: "Nein"
-  hospital: "Spital"
-  privatePractice: ""
-  ems: ""
+  hospital: "Krankenhaus"
+  privatePractice: "Privatpraxis"
+  ems: "Alters- und Pflegeheim"
   italy: "Italien"
   spain: "Spanien"
   germany: "Deutschland"
@@ -43,3 +44,4 @@ de:
   diabetes: "Diabetes"
   followingSymptoms: "Leiden Sie derzeit an folgenden Symptomen:"
   sendForm: "Formular absenden"
+  sinceHowManyDays: "Seit wievielen Tagen?"
