--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -43,3 +43,4 @@
     diabetes: "Diabète"
     followingSymptoms: "Souffrez-vous actuellement des symptômes suivants:"
     sendForm: "~ Envoyer le formulaire"
+    sinceHowManyDays: "~ Seit wievielen Tagen?"
