--- a/locales/it.yml
+++ b/locales/it.yml
@@ -43,3 +43,4 @@
     diabetes: "Diabete"
     followingSymptoms: "Attualmente soffre dei seguenti sintomi:"
     sendForm: "~ invia il modulo"
+    sinceHowManyDays: "~ Seit wievielen Tagen?"
