--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -9,14 +9,14 @@
     Infoline des BAG: +41 58 463 00 00</p>"
     toform: "Au formulaire"
     sex: "Sexe"
-    male: "Mâle"
+    male: "Homme"
     female: "Femme"
-    noinformation: "~ Aucune information"
+    noinformation: "Aucune information"
     age: "Age"
     zip: "Code postal"
     other: "Autres"
     phoneDigits: "Les quatre derniers chiffres de votre numéro de téléphone"
-    feelsHealthy: "Fühlen Sie sich gesund?"
+    feelsHealthy: "Êtes-vous en bonne santé?"
     hasBeenTested: "Avez-vous été testé pour le covid-19?"
     whereTested: "Si oui: où?"
     whenTested: "Si oui: quand?"
@@ -42,5 +42,5 @@
     lung: "Pulmonaire"
     diabetes: "Diabète"
     followingSymptoms: "Souffrez-vous actuellement des symptômes suivants:"
-    sendForm: "~ Envoyer le formulaire"
-    sinceHowManyDays: "~ Seit wievielen Tagen?"
+    sendForm: "Envoyer le formulaire"
+    sinceHowManyDays: "Seit wievielen Tagen?"
