Added share links

--- a/locales/it.yml
+++ b/locales/it.yml
@@ -5,16 +5,16 @@
     <p>È di grande importanza individuare i casi sospetti di Covid-19 in una fase iniziale per contenere l'ulteriore diffusione dell'infezione.</p>
     <p><b>Compilando questo modulo, contribuite in modo significativo al superamento di questa crisi in modo efficiente e mirato.</b></p>
     <p>I vostri dati saranno raccolti in forma anonima. Non sarete identificati per nome.</p>"
-    toform: "~ Al modulo"
+    toform: "Al modulo"
     sex: "Sesso"
     male: "Uomo"
     female: "Donna"
-    noinformation: "~ Nessuna informazione"
+    noinformation: "Nessuna informazione"
     age: "Età"
     zip: "Codice Postale"
     other: "Altro"
     phoneDigits: "Le ultime quattro cifre del vostro numero di telefono"
-    feelsHealthy: "~ Ti senti in salute?"
+    feelsHealthy: "Ti senti in salute?"
     hasBeenTested: "Siete stati testati per covid-19?"
     whereTested: "Se si: dove?"
     whenTested: "Se si: quando?"
@@ -40,5 +40,5 @@
     lung: "Pulmoni"
     diabetes: "Diabete"
     followingSymptoms: "Attualmente soffre dei seguenti sintomi:"
-    sendForm: "~ invia il modulo"
+    sendForm: "Invia il modulo"
     sinceHowManyDays: "~ Seit wievielen Tagen?"
