--- a/locales/it.yml
+++ b/locales/it.yml
@@ -11,7 +11,7 @@
     female: "Donna"
     noinformation: "Nessuna informazione"
     age: "Età"
-    birthyear: "Geburtsjahr"
+    birthyear: "Anno di nascita"
     zip: "Codice Postale"
     other: "Altro"
     phoneDigits: "Le ultime quattro cifre del vostro numero di telefono"
@@ -41,5 +41,11 @@
     lung: "Pulmoni"
     diabetes: "Diabete"
     followingSymptoms: "Attualmente soffre dei seguenti sintomi:"
-    sendForm: "Invia il modulo"
-    sinceHowManyDays: "~ Seit wievielen Tagen?"
+    sendForm: "Invia modulo"
+    sinceHowManyDays: "Quanti giorni?"
+    partners: "Partner"
+    implementation: "Attuazione"
+    imprint: "Note legali"
+    seemore: "Scopri di più"
+    shareon: "Condividi su"
+    shareby: "Condividi via"
