--- a/locales/it.yml
+++ b/locales/it.yml
@@ -1,10 +1,10 @@
 ---
   it:
-    title: "COVID-19 Tracking Svizzera"
-    introduction: "<p>L'epidemia di coronavirus si sta diffondendo rapidamente in Europa.</p>
-    <p>È di grande importanza individuare i casi sospetti di Covid-19 in una fase iniziale per contenere l'ulteriore diffusione dell'infezione.</p>
-    <p><b>Compilando questo modulo, contribuite in modo significativo al superamento di questa crisi in modo efficiente e mirato.</b></p>
-    <p>I vostri dati saranno raccolti in forma anonima. Non sarete identificati per nome.</p>"
+    title: "Tracciamento del COVID-19 in Svizzera"
+    introduction: "<p>La diffusione del coronavirus in Europa è molto rapida.</p>
+    <p>Per contrastare la malattia, i casi sospetti devono essere identificati il più presto possibile. È questo lo scopo della campagna.</p>
+    <p><b>I suoi dati possono contribuire a salvare vite umane. Con la compilazione del modulo sottostante, può fornire il suo contributo, affinché possiamo superare insieme questa crisi.</b></p>
+    <p>Importante: il rilevamento dei dati garantisce l’anonimato e non consente di trarre conclusioni sulla sua identità.</p>"
     toform: "Al modulo"
     sex: "Sesso"
     male: "Uomo"
