Added meta description

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -1,6 +1,7 @@
 ---
 de:
   title: "COVID-19 Tracking Schweiz"
+  description: "Ihre Daten können helfen, Leben zu retten. Wenn Sie das untenstehende Formular ausfüllen, tragen Sie dazu bei, dass wir diese Krise gemeinsam meistern können."
   introduction: "<p>Das Coronavirus breitet sich in Europa rasant aus.</p>
   <p>Um die Krankheit einzudämmen, müssen Verdachtsfälle möglichst früh identifiziert werden. Dazu dient diese Kampagne.</p>
   <p><b>Ihre Daten können helfen, Leben zu retten. Wenn Sie das untenstehende Formular ausfüllen, tragen Sie dazu bei, dass wir diese Krise gemeinsam meistern können.</b></p>
