--- a/locales/it.yml
+++ b/locales/it.yml
@@ -1,6 +1,7 @@
 ---
   it:
     title: "Tracciamento del COVID-19 in Svizzera"
+    description: "Ihre Daten können helfen, Leben zu retten. Wenn Sie das untenstehende Formular ausfüllen, tragen Sie dazu bei, dass wir diese Krise gemeinsam meistern können."
     introduction: "<p>La diffusione del coronavirus in Europa è molto rapida.</p>
     <p>Per contrastare la malattia, i casi sospetti devono essere identificati il più presto possibile. È questo lo scopo della campagna.</p>
     <p><b>I suoi dati possono contribuire a salvare vite umane. Con la compilazione del modulo sottostante, può fornire il suo contributo, affinché possiamo superare insieme questa crisi.</b></p>
