--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -50,3 +50,6 @@
     seemore: "En savoir plus"
     shareon: "Partager sur"
     shareby: "Partager par"
+    press: "Presse"
+    generalinfo: "Allgemeine Informationen"
+    technology: "Technik"
