--- a/locales/it.yml
+++ b/locales/it.yml
@@ -50,3 +50,6 @@
     seemore: "Scopri di più"
     shareon: "Condividi su"
     shareby: "Condividi via"
+    press: "Presse"
+    generalinfo: "Allgemeine Informationen"
+    technology: "Technik"
