--- a/locales/de.yml
+++ b/locales/de.yml
@@ -51,3 +51,6 @@ de:
   seemore: "Mehr erfahren"
   shareon: "Teilen auf"
   shareby: "Teilen via"
+  press: "Presse"
+  generalinfo: "Allgemeine Informationen"
+  technology: "Technik"
