Minor correction in italian translation

--- a/locales/it.yml
+++ b/locales/it.yml
@@ -39,7 +39,7 @@
     germany: "Germania"
     france: "Francia"
     heart: "Cuore"
-    lung: "Pulmoni"
+    lung: "Polmoni"
     diabetes: "Diabete"
     followingSymptoms: "Attualmente soffre dei seguenti sintomi:"
     sendForm: "Invia modulo"
