--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -51,5 +51,5 @@
     shareon: "Partager sur"
     shareby: "Partager par"
     press: "Presse"
-    generalinfo: "Allgemeine Informationen"
-    technology: "Technik"
+    generalinfo: "Informations générales"
+    technology: "Technologie"
