Added social text to share buttons

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -1,7 +1,7 @@
 ---
   fr:
     title: "COVID-19-Tracking Suisse"
-    description: "Sauve vies à l’aide du tracker COVID-19."
+    description: "Sauve des vies à l’aide du tracker COVID-19."
     introduction: "<p>Le coronavirus se propage en Europe à une vitesse vertigineuse.</p>
     <p>Pour enrayer la maladie, les cas suspects doivent être identifiés le plus tôt possible. C’est l’objectif de la présente campagne.</p>
     <p><b>Vos données peuvent aider à sauver des vies. En remplissant le formulaire ci-dessous, vous participez à l’effort commun pour venir à bout de cette crise.</b></p>
