Added italian translation

--- a/locales/it.yml
+++ b/locales/it.yml
@@ -2,7 +2,7 @@
   it:
     url: "https://www.covidtracker.ch/it"
     title: "Tracciamento del COVID-19 in Svizzera"
-    description: "Sauve des vies à l’aide du tracker COVID-19."
+    description: "Solo agendo insieme possiamo salvare vite! Aiutaci a proteggere persone particolarmente a rischio usando il Covid-19-Tracker."
     introduction: "<p>La diffusione del coronavirus in Europa è molto rapida.</p>
     <p>Per contrastare la malattia, i casi sospetti devono essere identificati il più presto possibile. È questo lo scopo della campagna.</p>
     <p><b>I suoi dati possono contribuire a salvare vite umane. Con la compilazione del modulo sottostante, può fornire il suo contributo, affinché possiamo superare insieme questa crisi.</b></p>
