--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -55,3 +55,4 @@
     generalinfo: "Informations générales"
     technology: "Technologie"
     supportedBy: "Soutenu par"
+    phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
