--- a/locales/it.yml
+++ b/locales/it.yml
@@ -55,3 +55,4 @@
     generalinfo: "Informazioni generali"
     technology: "Tecnologia"
     supportedBy: "Supportato da"
+    phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
