Added press release link

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -56,4 +56,5 @@ de:
   generalinfo: "Allgemeine Informationen"
   technology: "Technik"
   supportedBy: "Unterstützt durch"
+  pressRelease: "Pressemitteilung Kanton Bern"
   phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
