Added test result field

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -58,3 +58,6 @@ de:
   supportedBy: "Unterstützt durch"
   pressRelease: "Pressemitteilung Kanton Bern"
   phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
+  testResult: "Falls ja, wie war Ihr Testresultat?"
+  positive: "Positiv"
+  negative: "Negativ"
