--- a/locales/it.yml
+++ b/locales/it.yml
@@ -56,3 +56,6 @@
     technology: "Tecnologia"
     supportedBy: "Supportato da"
     phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
+    testResult: "Falls ja, wie war Ihr Testresultat?"
+    positive: "Positiv"
+    negative: "Negativ"
