Added data protection page

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -61,3 +61,4 @@ de:
   testResult: "Falls ja, wie war Ihr Testresultat?"
   positive: "Positiv"
   negative: "Negativ"
+  dataProtection: "Datenschutz"
