--- a/locales/de.yml
+++ b/locales/de.yml
@@ -33,6 +33,7 @@ de:
   throat: "Halsschmerzen"
   yesAnswer: "Ja"
   noAnswer: "Nein"
+  maybe: "Vermutlich"
   hospital: "Krankenhaus"
   privatePractice: "Privatpraxis"
   ems: "Alters- und Pflegeheim "
