--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -24,6 +24,7 @@
     worksInHealth: "Travaillez-vous dans le système de santé avec des patients ?"
     wasAbroad: "Avez-vous été à l’étranger durant ces 14 derniers jours ?"
     wasInContactWithCase: "Avez-vous été en contact avec un cas positif pour le covid-19 ?"
+    dateContacted: "Si oui, quand avez-vous été contaminé-e?"
     chronicCondition: "Souffrez-vous d’une affection chronique ?"
     fever: "Fièvre de plus de 38 degrés"
     coughing: "Toux"
@@ -32,6 +33,7 @@
     throat: "Maux de gorge"
     yesAnswer: "Oui"
     noAnswer: "Non"
+    maybe: "Probablement"
     hospital: "Hôpital"
     privatePractice: "Pratique privée"
     ems: "EMS"
@@ -55,7 +57,9 @@
     generalinfo: "Informations générales"
     technology: "Technologie"
     supportedBy: "Soutenu par"
+    pressRelease: "Communiqué de presse du canton de Berne"
     phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
-    testResult: "Falls ja, wie war Ihr Testresultat?"
-    positive: "Positiv"
-    negative: "Negativ"
+    testResult: "Si oui, quel a été le résultat de votre test?"
+    positive: "Positif"
+    negative: "Négatif"
+    dataProtection: "Protection des données"
