--- a/locales/it.yml
+++ b/locales/it.yml
@@ -19,11 +19,12 @@
     phoneDigits: "Le ultime quattro cifre del vostro numero di telefono"
     feelsHealthy: "Ti senti in salute?"
     hasBeenTested: "Siete stati testati per covid-19?"
-    whereTested: "Se si: dove?"
-    whenTested: "Se si: quando?"
+    whereTested: "In caso di riscontro positivo, dove è stato eseguito il test?"
+    whenTested: "In caso di riscontro positivo, quando è stato eseguito il test?"
     worksInHealth: "Lavora nel sistema sanitario con i pazienti?"
     wasAbroad: "È stato all'estero negli ultimi 14 giorni?"
     wasInContactWithCase: "Siete stati in contatto con un caso positivo di covide-19?"
+    dateContacted: "In caso di riscontro positivo, quando ha avuto il contatto?"
     chronicCondition: "Soffre di una condizione cronica?"
     fever: "Febbre oltre i 38 gradi"
     coughing: "Tosse"
@@ -32,6 +33,7 @@
     throat: "Mal di gola"
     yesAnswer: "Si"
     noAnswer: "No"
+    maybe: "Probabilmente"
     hospital: "Ospedale"
     privatePractice: "Ambulatorio privato"
     ems: "Centro medico-sociale"
@@ -55,7 +57,9 @@
     generalinfo: "Informazioni generali"
     technology: "Tecnologia"
     supportedBy: "Supportato da"
+    pressRelease: "Comunicato stampa del Canton Berna"
     phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
-    testResult: "Falls ja, wie war Ihr Testresultat?"
-    positive: "Positiv"
-    negative: "Negativ"
+    testResult: "Se sì, qual è stato il risultato?"
+    positive: "Positivo"
+    negative: "Negativo"
+    dataProtection: "Protezione dei dati"
