--- a/locales/it.yml
+++ b/locales/it.yml
@@ -5,7 +5,7 @@
     description: "Solo agendo insieme possiamo salvare vite! Aiutaci a proteggere persone particolarmente a rischio usando il Covid-19-Tracker."
     introduction: "<p>La diffusione del coronavirus in Europa è molto rapida.</p>
     <p>Per contrastare la malattia, i casi sospetti devono essere identificati il più presto possibile. È questo lo scopo della campagna.</p>
-    <p><b>I suoi dati possono contribuire a salvare vite umane. Con la compilazione del modulo sottostante, può fornire il suo contributo, affinché possiamo superare insieme questa crisi.</b></p>
+    <p><b>Indipendentemente dal fatto che sia sano o ammalato, che sia infetto o meno: I suoi dati possono contribuire a salvare vite umane.</b> Con la compilazione del modulo sottostante, può fornire il suo contributo, affinché possiamo superare insieme questa crisi. L’ideale sarebbe poter partecipare a cadenza settimanale.</p>
     <p>Importante: il rilevamento dei dati garantisce l’anonimato e non consente di trarre conclusioni sulla sua identità.</p>"
     toform: "Al modulo"
     sex: "Sesso"
