Added french press release

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -58,6 +58,7 @@ de:
   technology: "Technik"
   supportedBy: "Unterstützt durch"
   pressRelease: "Pressemitteilung Kanton Bern"
+  pressReleaseLink: "https://www.be.ch/portal/de/index/mediencenter/medienmitteilungen.meldungNeu.html/portal/de/meldungen/mm/2020/03/20200326_1115_gruppe_von_jungenforschernstartetlandesweitgeografischedatensamm"
   phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
   testResult: "Falls ja, wie war Ihr Testresultat?"
   positive: "Positiv"
