--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -58,6 +58,7 @@
     technology: "Technologie"
     supportedBy: "Soutenu par"
     pressRelease: "Communiqué de presse du canton de Berne"
+    pressReleaseLink: "https://www.be.ch/portal/fr/index/mediencenter/medienmitteilungen.meldungNeu.html/portal/fr/meldungen/mm/2020/03/20200326_1115_gruppe_von_jungenforschernstartetlandesweitgeografischedatensamm"
     phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
     testResult: "Si oui, quel a été le résultat de votre test?"
     positive: "Positif"
