--- a/locales/it.yml
+++ b/locales/it.yml
@@ -58,6 +58,7 @@
     technology: "Tecnologia"
     supportedBy: "Supportato da"
     pressRelease: "Comunicato stampa del Canton Berna"
+    pressReleaseLink: "https://www.be.ch/portal/fr/index/mediencenter/medienmitteilungen.meldungNeu.html/portal/fr/meldungen/mm/2020/03/20200326_1115_gruppe_von_jungenforschernstartetlandesweitgeografischedatensamm"
     phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
     testResult: "Se sì, qual è stato il risultato?"
     positive: "Positivo"
