Translation for impressum

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -49,7 +49,7 @@ en  :
   sinceHowManyDays: "Since how many days?"
   partners: "Partners"
   implementation: "Realization"
-  imprint: "Impressum"
+  imprint: "Legal Notice"
   seemore: "Learn more"
   shareon: "Share on"
   shareby: "Share on"
