New intro data protection sentence

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -6,7 +6,7 @@ de:
   introduction: "<p>Das Coronavirus breitet sich in Europa rasant aus.</p>
   <p>Um die Krankheit einzudämmen, müssen Verdachtsfälle möglichst früh identifiziert werden. Dazu dient diese Kampagne.</p>
   <p><b>Egal ob Sie krank sind oder gesund, infiziert oder nicht: Ihre Daten können helfen, Leben zu retten.</b> Wenn Sie das untenstehende Formular ausfüllen, tragen Sie dazu bei, dass wir diese Krise gemeinsam meistern können.  Im Idealfall wiederholen Sie Ihre Teilnahme im Wochentakt (<a href=\"/images/covidtracker.ics\">Kalendererinnerung einrichten</a>).</p>
-  <p>Wichtig: Die Daten werden anonym erfasst und erlauben keinen Rückschluss auf Personen.</p>"
+  <p>Wichtig: Wir verwenden die erfassten Daten nicht, um Rückschlüsse auf einzelne Personen zu ziehen.</p>"
   toform: "Zum Formular"
   sex: "Geschlecht"
   male: "Männlich"
