Added eth logos

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -56,7 +56,7 @@ de:
   press: "Presse"
   generalinfo: "Allgemeine Informationen"
   technology: "Technik"
-  supportedBy: "Unterstützt durch"
+  supportedBy: "In Zusammenarbeit mit"
   pressRelease: "Pressemitteilung Kanton Bern"
   pressReleaseLink: "https://www.be.ch/portal/de/index/mediencenter/medienmitteilungen.meldungNeu.html/portal/de/meldungen/mm/2020/03/20200326_1115_gruppe_von_jungenforschernstartetlandesweitgeografischedatensamm"
   phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
