--- a/locales/en.yml
+++ b/locales/en.yml
@@ -56,7 +56,7 @@ en:
   press: "Press"
   generalinfo: "General Information"
   technology: "Tech"
-  supportedBy: "Supported by"
+  supportedBy: "In cooperation with"
   pressRelease: "Press release Canton of Bern"
   phoneInfo: "Wird benötigt, um Missbräuche zu verhindern sowie Daten von Personen, die den Fragebogen mehrmals ausfüllen, einander zuzuordnen."
   testResult: "If yes, what was the result?"
