Fixes for english translation

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -3,11 +3,11 @@ en:
   url: "https://www.covidtracker.ch"
   title: "COVID-19 Tracking Switzerland"
   description: "Only together can we save lives! Do your part to protect risk groups with the Covid-19 tracker."
-  introduction: "<p>The coronavirus is spreading rapidly in Europe.</p>
+  introduction: "<p>The coronavirus COVID-19 is spreading rapidly throughout Europe.</p>
   <p>In order to contain the disease, suspected cases must be identified as early as possible. This is the purpose of this campaign.</p>
   <p><b>Whether you are sick or healthy, infected or not, your data can help save lives.</b> By filling out the form below, you are helping us to overcome this crisis together. Ideally, repeat your participation weekly (<a href=\"/images/covidtracker.ics\">set up calendar event</a>).</p>
   <p>Important: The data is collected anonymously and does not allow identification of individuals.</p>"
-  toform: "Visit form"
+  toform: "Submit your feedback"
   sex: "Sex"
   male: "Male"
   female: "Female"
@@ -17,13 +17,13 @@ en:
   zip: "Postal code"
   other: "other"
   phoneDigits: "Letzte vier Ziffern Ihrer Telefonnummer"
-  feelsHealthy: "Do you feel healthy?"
-  hasBeenTested: "Have you been tested on Covid-19?"
+  feelsHealthy: "From the best of your knowledge right now, do you feel healthy?"
+  hasBeenTested: "Have you been tested for COVID-19?"
   whereTested: "If so, when have you been tested?"
   whenTested: "If yes, where have you been tested?"
   worksInHealth: "Do you work with patients in the healthcare system?"
   wasAbroad: "Have you been abroad in the last 14 days?"
-  wasInContactWithCase: "Have you been in contact with a positive case of Covid-19?"
+  wasInContactWithCase: "Have you been in physical proximity with someone who has been diagnosed with COVID-19?"
   dateContacted: "If so, when?"
   chronicCondition: "Do you suffer from a chronic illness?"
   fever: "Fever above 38 Degrees"
@@ -33,7 +33,7 @@ en:
   throat: "Soar throat"
   yesAnswer: "Yes"
   noAnswer: "No"
-  maybe: "Probably"
+  maybe: "I think so"
   hospital: "Hospital"
   privatePractice: "Private Practice"
   ems: "Retirement home"
@@ -45,7 +45,7 @@ en:
   lung: "Lungs"
   diabetes: "Diabetes"
   followingSymptoms: "Do you suffer from any of the following symptoms:"
-  sendForm: "Send answers"
+  sendForm: "Submit your feedback"
   sinceHowManyDays: "Since how many days?"
   partners: "Partners"
   implementation: "Realization"
