Persists form submissions to localStorage if the user consents and reloads them when they return.

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -64,3 +64,4 @@ de:
   positive: "Positiv"
   negative: "Negativ"
   dataProtection: "Datenschutz"
+  saveResponses: "Erinnere dich an meine Antworten für das nächste Mal."
