--- a/locales/en.yml
+++ b/locales/en.yml
@@ -63,3 +63,4 @@ en:
   positive: "Positive"
   negative: "Negative"
   dataProtection: "Data protection"
+  saveResponses: "Remember my responses for next time"
