--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -64,3 +64,4 @@
     positive: "Positif"
     negative: "Négatif"
     dataProtection: "Protection des données"
+    saveResponses: "Rappelez-vous mes réponses pour la prochaine fois."
