--- a/locales/it.yml
+++ b/locales/it.yml
@@ -64,3 +64,4 @@
     positive: "Positivo"
     negative: "Negativo"
     dataProtection: "Protezione dei dati"
+    saveResponses: "Ricorda le mie risposte per la prossima volta."
